# packages/api-types/src/index.ts
@@ -21,7 +21,7 @@ export {
   USER_STATUSES,
   WATERMARK_POSITIONS,
   type Account,
-  type AdminCarousel,
+  type AdminBanner,
   type AdminCourse,
   type AdminFeaturedArtwork,
   type Artwork,
@@ -36,7 +36,8 @@ export {
   type CreateAccountRequest,
   type CreateArtworkFields,
   type CreateBindingRequest,
-  type CreateCarouselRequest,
+  type CreateBannerRequest,
+  type CreateFeaturedFromArtworksRequest,
   type CreateCommentRequest,
   type CreateCourseRequest,
   type CreateFeaturedArtworkRequest,
@@ -51,7 +52,7 @@ export {
   type PosterDownload,
   type PosterPreview,
   type PosterTemplateKey,
-  type PublicCarousel,
+  type PublicBanner,
   type PublicCourse,
   type PublicFeaturedArtwork,
   type PublicHome,
@@ -65,7 +66,10 @@ export {
   type UpdateAccountRequest,
   type UpdateAccountStatusRequest,
   type UpdateBrandRequest,
-  type UpdateCarouselRequest,
+  type ReorderHomeItemsRequest,
+  type UpdateBannerRequest,
+  type UpdateBannerStatusRequest,
+  type UpdatePublishStatusRequest,
   type UpdateCourseRequest,
   type UpdateFeaturedArtworkRequest,
   type UpdateStudentRequest,
